[package]
name = "scanner-listener"
version = "0.1.0"
authors = ["Ryan Pell <ryan@ryanpell.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63" }
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.61", features = [ 'console', 'Window', 'KeyboardEvent' ] }
js-sys = "0.3.61"
lazy_static = "1.4.0"
substring = "1.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
