[package]
name = "scanner-listener"
version = "0.1.0"
authors = ["Ryan Pell <ryan@ryanpell.co.uk>"]
edition = "2018"
description = "Keyboard event listener for USB HID scanner"
repository = "https://github.com/Ryan-Pell/scanner-listener"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63" }
console_error_panic_hook = { version = "0.1.6", optional = true }
web-sys = { version = "0.3.61", features = [ 'console', 'Window', 'KeyboardEvent' ] }
js-sys = "0.3.61"
substring = "1.4.5"

[dev-dependencies]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
